# ciderpress

./: .gitignore  .prettierignore  QUICKSTART.md  README.md  clean.sh  eslint.config.js  index.html  package.json  test-fresh-migration.js  test-migration-verification.js  test-migration.js  vite.config.ts
.cargo/: config.toml
public/: migration-log.html
scripts/: build-nlm.sh  build-universal.sh  release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: config.rs  database.rs  logging.rs  migrate.rs  mod.rs  models.rs  nlm.rs  parakeet.rs  stats.rs  transcribe.rs
src/components/: AudioPlayer.tsx  DraggableCard.tsx  ErrorBoundary.tsx  LockScreen.tsx  QuillEditor.tsx  ThemeToggle.tsx
src/contexts/: ThemeContext.tsx
src/pages/: LabelSettings.tsx  Migrate.tsx  NotebookLM.tsx  Settings.tsx  Slices.tsx  Stats.tsx
src/themes/: index.ts
src/types/: transcription.ts
test-audio/: 20250427 162429-5441EC7D.m4a  speech.aiff
